Style changes so media image appears properly on page.html listing fixed spacing issues with filter block search/dropdown filters. renamed template - checkbox status - radio remove - part

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -784,8 +784,8 @@ button:disabled,
 }
 
 .btn-dropdown {
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
+  padding-top: 0.37em;
+  padding-bottom: 0.37em;
   background: #dddeee;
   color: #404040;
   display: flex;
@@ -1121,15 +1121,16 @@ label {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   align-items: center;
+  border-top: solid 1px #dddeee;
 }
 
 .input-block {
-  width: 100%;
+  height: 100%;
   background: white !important;
   display: grid;
   grid-template-columns: auto 1fr;
   align-items: center;
-  border: solid 1px #dddeee;
+  border-bottom: solid 1px #dddeee;
   grid-column: 1/-1;
 }
 @media screen and (min-width: 768px) {
@@ -1138,27 +1139,29 @@ label {
   }
 }
 .input-block__icon {
-  border: solid 1px black;
   border: none;
   padding-right: 0.75em;
   padding-left: 0.75em;
   color: rgba(128, 128, 128, 0.75);
 }
 .input-block__search-input {
-  padding-right: 0.5em !important;
-  background: white !important;
   margin: 0;
   border: none !important;
-  font-size: 1.25em;
+  font-size: 1rem;
   color: #808080;
 }
 
 /* Button Dropdown Block */
 .btn-dropdown-block {
   position: relative;
+  border-bottom: solid 1px #dddeee;
+  border-left: solid 1px #dddeee;
 }
 .btn-dropdown-block .check-block-item {
   display: flex;
+}
+.btn-dropdown-block:not(:last-of-type) {
+  border-right: solid 1px #babdde;
 }
 
 /* Radio Block */
@@ -1423,7 +1426,11 @@ label {
   margin-left: 0.5em;
 }
 .list-item-page .media {
-  max-height: 88px;
+  display: flex;
+  align-items: center;
+}
+.list-item-page .media img {
+  height: 88px;
   width: 88px;
   object-fit: cover;
 }
